Some basic configuration

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,10 +1,9 @@
-@import './base.css';
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  font-weight: normal;
+  @apply flex flex-col w-full;
 }
 
 a,
@@ -26,10 +25,23 @@ a,
     display: flex;
     place-items: center;
   }
+}
 
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
+@layer components {
+  .btn {
+    @apply border-2 m-2 py-2 px-1 min-w-36 rounded-md;
+  }
+  .card {
+    @apply flex justify-around items-end bg-white rounded-xl shadow-md border-2 p-4 my-3 w-80;
+    > div {
+      @apply w-full;
+    }
+  }
+
+  label {
+    @apply mx-2;
+  }
+  input {
+    @apply m-2 p-1 bg-slate-100 rounded-md;
   }
 }
