--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -38,6 +38,21 @@ a,
     }
   }
 
+  h1,
+  h2,
+  h3 {
+    @apply font-bold;
+  }
+
+  h1 {
+    @apply text-xl;
+  }
+
+  h2,
+  h3 {
+    @apply text-lg;
+  }
+
   label {
     @apply mx-2;
   }
